miniextendr-macros/tests/ui/derive_dataframe_generic.rs
//! Test: derive DataFrameRow on generic struct should fail.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
struct Row<T> {
    value: T,
}

fn main() {}
